--- a/Net_Gis_Falcon/Net_Gis_Falcon/Net_Gis_Falcon.csproj
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Net_Gis_Falcon.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Npgsql" Version="5.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="OpenLayers" Version="4.6.4" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
